Fix an issue with quote author break into 2 lines

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -184,6 +184,7 @@ a:hover {
 	bottom: 0;
 	transform: translateX(-50%);
 	transition-duration: 500ms;
+	white-space: nowrap;
 }
 
 /**
